[package]
name = "easyenv"
edition = "2018"
version = "0.0.7"
authors = [
  "Brandon Thomas <bt@brand.io>",
  "Brandon Thomas <echelon@gmail.com>",
]
description = "Easy ENV variable handling; also sets up Rust's env_logger."
keywords = ["ENV", "environment", "helper"]
license = "BSD-4-Clause"
readme = "README.md"
repository = "https://github.com/echelon/easyenv.rs"
documentation = "https://docs.rs/easyenv"

[badges]
travis-ci = { repository = "echelon/easyenv.rs" }

[lib]
name = "easyenv"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4"
